# Templatized-DS

./: .gitignore  CMakeLists.txt  readme.md
include/: List.h  ListNode.h
includes/: List.h  ListNodes.h
src/: runList.cpp
